client: rebuild bl to avoid too many vector(> IOV_MAX)

Fixes: https://tracker.ceph.com/issues/49936
Signed-off-by: Yanhu Cao <gmayyyha@gmail.com>